all bottons work when clicked

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
       <div id="hour-9" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-        <textarea class="nine col-8 col-md-10 " rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -59,7 +59,7 @@
       <!-- Example of a present time block. The "present" class adds a red background color. -->
       <div id="hour-10" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-        <textarea class="ten col-8 col-md-10 " rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
