--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
       <div id="hour-9" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text"class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -59,7 +59,7 @@
       <!-- Example of a present time block. The "present" class adds a red background color. -->
       <div id="hour-10" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3"></textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -82,7 +82,7 @@
         </button>
       </div>
 
-      <div id="hour-1" class="row time-block future">
+      <div id="hour-13" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -90,7 +90,7 @@
         </button>
       </div>
 
-      <div id="hour-2" class="row time-block future">
+      <div id="hour-14" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -98,7 +98,7 @@
         </button>
       </div>
 
-      <div id="hour-3" class="row time-block future">
+      <div id="hour-15" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -106,7 +106,7 @@
         </button>
       </div>
 
-      <div id="hour-4" class="row time-block future">
+      <div id="hour-16" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -114,7 +114,7 @@
         </button>
       </div>
 
-      <div id="hour-5" class="row time-block future">
+      <div id="hour-17" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
