--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         code is implemented.
         -->
 
-      <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour" class="row time-block past">
+  
+      <div id="09" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea id="text"class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -56,8 +56,8 @@
         </button>
       </div>
 
-      <!-- Example of a present time block. The "present" class adds a red background color. -->
-      <div id="hour" class="row time-block present">
+      
+      <div id="10" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"></textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -65,8 +65,7 @@
         </button>
       </div>
 
-      <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="hour" class="row time-block future">
+      <div id="11" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -74,7 +73,7 @@
         </button>
       </div>
 
-      <div id="hour" class="row time-block future">
+      <div id="12" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -82,7 +81,7 @@
         </button>
       </div>
 
-      <div id="hour" class="row time-block future">
+      <div id="13" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -90,7 +89,7 @@
         </button>
       </div>
 
-      <div id="hour" class="row time-block future">
+      <div id="14" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -98,7 +97,7 @@
         </button>
       </div>
 
-      <div id="hour" class="row time-block future">
+      <div id="15" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -106,7 +105,7 @@
         </button>
       </div>
 
-      <div id="hour" class="row time-block future">
+      <div id="16" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -114,7 +113,7 @@
         </button>
       </div>
 
-      <div id="hour" class="row time-block future">
+      <div id="17" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button id="save" class="btn saveBtn col-2 col-md-1" aria-label="save">
